tests/error/dur_prefix.gw
// [contains] in prefix of dur expression
 NULL::samp;
